# routes/index.js
@@ -16,6 +16,7 @@ router.get('/', (req, res) => {
 router.use('/characters', require('./characters'));
 router.use('/episodes', require('./episodes'));
 router.use('/nations', require('./nations'));
+router.use('/users', require('./users')); 
 
 router.get('/login', passport.authenticate('github'), (req, res) => {
     // This function will not be called as the request will be redirected to GitHub for authentication
